--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,10 @@
 body {
     font-size: 62.5%;
     background-color: hsl(230, 100%, 99%);
-}
-h5, span, p, .btn {
     font-family: "Manrope",sans-serif;
     color: hsl(225, 20%, 60%);
 }
+
 header {
     padding-top: 3rem;
     padding-bottom: 2.7rem;
@@ -19,13 +18,18 @@ header h5 {
 li {
     padding-bottom: .5rem;
 }
+.pageViewParagraph {
+    font-size: large;
+    padding-bottom: 1rem;
+}
 .priceContainer span {
+    font-size: 2rem;
     font-weight: 800;
     color: hsl(227, 35%, 25%);
 }
 .priceContainer {
-    font-size: large;
-    padding-top: 1rem;
+    font-size: 1rem;
+    padding-top: 2rem;
 }
 .img-fluid {
     background-image: url('/images/bg-pattern.svg');
@@ -46,7 +50,7 @@ li {
     width: 100%;
 }
 .wrap {
-    width: 100%;
+    width: 95%;
     position: relative;
     
   }
@@ -74,6 +78,7 @@ width: 0;
 height: 100%;
 background: hsl(174, 86%, 45%);
 border-radius: 4px;
+opacity: 60%;
 }
 
 .thumb {
@@ -89,7 +94,7 @@ top: 50%;
 left: 0;
 transform: translate(0%, -50%);
 pointer-events: none;
-box-shadow: 1px 2px 10px hsl(174, 86%, 45%);
+box-shadow: 1px 3px 20px hsl(174, 86%, 45%);
 }
 .billingSwitch {
 
@@ -103,15 +108,13 @@ box-shadow: 1px 2px 10px hsl(174, 86%, 45%);
     height: 20px;
     float:right;
   }
-  
-  /* Hide default HTML checkbox */
 .switch input {
       display:none;
     }
 .slider {
   position: absolute;
   cursor: pointer;
-  top: 0;
+  top: -1px;
   left: 0;
   right: 0;
   bottom: 0;
@@ -148,7 +151,6 @@ input:checked + .slider:before {
   transform: translateX(20px);
 }
 
-/* Rounded sliders */
 .slider.round {
   border-radius: 34px;
 }
@@ -158,10 +160,23 @@ input:checked + .slider:before {
 }
 .trialButton {
     width: fit-content;
+    color: hsl(224, 65%, 95%);
+    background-color: hsl(227, 35%, 25%);
     border-radius: 40px;
-    padding: 5px 20px;
+    padding: 5px 40px;
+    margin-bottom: 1.5rem;
+    font-size: .6rem;
+}
+#priceParagraph {
+    font-size:.7rem;
 }
 #discountBadge {
     background-color: hsl(14, 92%, 95%);
     color: hsl(15, 100%, 70%);
+}
+@media (min-width: 1024px) {
+    .card {
+        width: 50%;
+        margin-left: 100rem;
+    }
 }
