--- a/style/style.css
+++ b/style/style.css
@@ -32,12 +32,12 @@ li {
     padding-top: 2rem;
 }
 .img-fluid {
-    background-image: url('/images/bg-pattern.svg');
+    background-image: url('./images/bg-pattern.svg');
     background-size: 290%;
     background-repeat: no-repeat;
 }
 .bg-image {
-    background-image: url('/images/pattern-circles.svg');
+    background-image: url('./images/pattern-circles.svg');
     background-repeat: no-repeat; 
     background-position: top;
     background-position-y: 3rem;
