--- a/style/style.css
+++ b/style/style.css
@@ -20,16 +20,12 @@ li {
 }
 .pageViewParagraph {
     font-size: large;
-    padding-bottom: 1rem;
+    padding-top: .7rem;
 }
-.priceContainer span {
+#rangeNumbers {
     font-size: 2rem;
     font-weight: 800;
     color: hsl(227, 35%, 25%);
-}
-.priceContainer {
-    font-size: 1rem;
-    padding-top: 2rem;
 }
 .img-fluid {
     background-size: 290%;
@@ -44,7 +40,7 @@ li {
 .card {
     background-color:  hsl(0, 0%, 100%);
     box-shadow: 1px 1px 5px;
-    margin: 0px 20px 0px;
+    margin: 0px 50px 0px;
     
 }
 .rangeslider {
@@ -185,7 +181,12 @@ input:checked + .slider:before {
 }
 @media (min-width: 1024px) {
     .card {
-        width: 50%;
+        width: 40%;
         margin: auto;
+    }
+}
+@media (min-width: 2560) {
+    .card {
+        width: 10%;
     }
 }
